cmd/cloud-hashing-staker/k8s/01-cloud-hashing-staker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-hashing-staker
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-hashing-staker
  template:
    metadata:
      labels:
        app: cloud-hashing-staker
    spec:
      containers:
      - name: cloud-hashing-staker
        image: uhub.service.ucloud.cn/entropypool/cloud-hashing-staker:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-hashing-staker
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50180
    targetPort: 50180
  - name: grpc
    port: 50181
    targetPort: 50181
  - name: prometheus
    port: 50182
    targetPort: 50182
  selector:
    app: cloud-hashing-staker
